# arkts-opencv

./: README.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/libs/opencv-mobile-2.4.13.7/arm64-v8a/share/OpenCV/: OpenCVModules.cmake
entry/libs/opencv-mobile-2.4.13.7/armeabi-v7a/include/opencv2/core/: core.hpp
entry/libs/opencv-mobile-2.4.13.7/armeabi-v7a/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/common/: common.cpp
entry/src/main/cpp/include/: common.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/pages/: Index.ets
